cmake_minimum_required(VERSION 3.16)
project(recursive_stepper LANGUAGES CXX)

add_library(${PROJECT_NAME} STATIC
    src/recursive_stepper.cpp
)

find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

target_include_directories(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
    logger
    PRIVATE
        Qt${QT_VERSION_MAJOR}::Core
)

create_test(
    recursive_stepper_test
    test/recursive_stepper_test.cpp
    LINK_LIBS
        ${PROJECT_NAME}
)